# ffmpeg-code

./: .gitattributes  CMakeLists.txt  README.md  aac解码.cpp  main.cpp  mp4Toflv.cpp  元数据采集.cpp  复用.c  录制视频.cpp  录制音频.cpp  抽取原始音频.cpp  查找音视频设备.cpp  编码YUV.cpp  编码pcm.cpp  自定义IO.cpp  解复用.c  解码h264.cpp  音频重采样.cpp
Res/: out.aac  out.pcm  output.aac
ffmpegInclude/libavutil/: ffversion.h  rational.h
ffmpegLib/: libavcodecd.lib  libavdeviced.lib  libavfilterd.lib  libavformatd.lib  libavutild.lib  libpostprocd.lib  libswresampled.lib  libswscaled.lib
